--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "js-cookie": "^3.0.5",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
