--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
-    "next": "15.1.4",
+    "next": "^15.2.4",
     "next-intl": "^3.26.3",
     "react": "^19.0.0"
   },
